Fix spacing for top banner

--- a/style.css
+++ b/style.css
@@ -54,8 +54,9 @@ body{
 
 .container-2-1 {
     display: flex;
-    padding-right: 120px;
     flex-flow: column wrap;
+    padding-right: 120px;
+    margin-right: auto;
 }
 
 .box-5 {
